--- a/package.json
+++ b/package.json
@@ -18,8 +18,13 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@tailwindcss/vite": "^4.1.4",
     "flowbite-react": "^0.11.7",
+    "i18next": "^25.2.1",
+    "i18next-browser-languagedetector": "^8.1.0",
+    "i18next-http-backend": "^3.0.2",
     "react": "^19.0.0",
     "react-dom": "^19.1.0",
+    "react-i18next": "^15.5.2",
+    "react-loading-skeleton": "^3.5.0",
     "react-router": "^7.6.0",
     "react-router-dom": "^7.6.0",
     "react-simple-typewriter": "^5.0.1",
